--- a/Css/style.css
+++ b/Css/style.css
@@ -1,26 +1,59 @@
 body {
-    background-color: rgb(63, 61, 61);
+    background-color: white;
     padding: 15px;
 }
 
-#header {
-    display: flex;
-}
 #header #nav-bar ul {
     display: flex;
-    flex-direction: row;
-    list-style-type: none;
-    margin-inline-start: 900px;
-    
+    justify-content: flex-end;
+    list-style-type: none;   
 }
 
-#header #nav-bar .nav-link {
+#header #nav-bar ul .nav-link {
     text-decoration: none;
+    margin-right: 10px;
+    color: coral;
     font-size: large;
-  
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    cursor: pointer;
+   
 }
 
 #header #header-img{
-    
-    height: 300px;
+    margin-top: 4000px;
+    height: 120px;
+    margin-top: -60px;
+}
+
+#header #banner img {
+    width: 100%;
+    height: 15rem;
+}
+
+#form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+#form #email {
+    width: 50%;
+    height: 2.375rem;
+    border-radius: 10px;
+    font-size: large;
+    border: none;
+    background-color: #fc9187;
+}
+
+#form #submit {
+    width: 300px;
+    height: 2.375rem;
+    border-radius: 10px;
+    cursor: pointer;
+    border: none;
+    font-size: large;
+    margin-top: 30px;
+    background-color: rgb(95, 196, 170);
 }
