--- a/Css/style.css
+++ b/Css/style.css
@@ -1,12 +1,19 @@
 body {
-    background-color: white;
+    background-color: rgb(202, 174, 174);
     padding: 15px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 #header #nav-bar ul {
     display: flex;
     justify-content: flex-end;
-    list-style-type: none;   
+    list-style-type: none;  
+}
+
+#header #nav-bar{
+    position: fixed;
+    width: 90%;
+    height: 30px;
 }
 
 #header #nav-bar ul .nav-link {
@@ -14,20 +21,20 @@ body {
     margin-right: 10px;
     color: coral;
     font-size: large;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     cursor: pointer;
-   
 }
 
 #header #header-img{
     margin-top: 4000px;
     height: 120px;
     margin-top: -60px;
+    border-radius: 70px;
 }
 
 #header #banner img {
     width: 100%;
     height: 15rem;
+    margin-top: 120px;
 }
 
 #form {
@@ -56,4 +63,62 @@ body {
     font-size: large;
     margin-top: 30px;
     background-color: rgb(95, 196, 170);
+}
+
+main #informacion #natural{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+main #informacion p {
+    font-size: large;
+    margin-top: 10% ;
+    font-size: 25px;
+    margin-right: 80px;
+}
+
+main #informacion img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 80px;
+    margin-top: 5%;
+    height: 200px;
+    width: 200px;
+}
+
+main #informacion #producto{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+main #informacion #organico{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+main #productos #imagenes {
+    display: grid;
+    margin: 70px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+  }
+  main #productos #imagenes img {
+    width: 100%;
+    height: 100px;
+}
+main #productos #imagenes #desc {
+    padding: 15px;
+    text-align: center;
+    font-size: 20px;
+}
+ 
+main #productos h1{
+    text-align: center;
+    margin-top: 40px;
+}
+
+footer p {
+    text-align: center;
 }
