--- a/Css/style.css
+++ b/Css/style.css
@@ -1,5 +1,4 @@
 body {
-    background-color: rgb(202, 174, 174);
     padding: 15px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
@@ -31,10 +30,12 @@ body {
     border-radius: 70px;
 }
 
+
 #header #banner img {
-    width: 100%;
-    height: 15rem;
+    width: 60%;
+    height: 10rem;
     margin-top: 120px;
+    margin-left: 20%;
 }
 
 #form {
@@ -75,13 +76,13 @@ main #informacion p {
     margin-top: 10% ;
     font-size: 25px;
     margin-right: 80px;
+    text-align: center;
 }
 
 main #informacion img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    border-radius: 80px;
     margin-top: 5%;
     height: 200px;
     width: 200px;
@@ -97,18 +98,22 @@ main #informacion #organico{
     grid-template-columns: 1fr 1fr;
 }
 
-main #productos #imagenes {
+main #productos .imagenes {
     display: grid;
     margin: 70px;
     border: 1px solid #ccc;
     float: left;
     width: 180px;
+    background: #fc9187;
+    opacity: 0.6;
   }
-  main #productos #imagenes img {
+  
+
+  main #productos .imagenes img {
     width: 100%;
     height: 100px;
 }
-main #productos #imagenes #desc {
+main #productos .imagenes #desc {
     padding: 15px;
     text-align: center;
     font-size: 20px;
