--- a/Css/style.css
+++ b/Css/style.css
@@ -3,30 +3,17 @@ body {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-#header #nav-bar ul {
-    display: flex;
-    justify-content: flex-end;
-    list-style-type: none;  
+a {
+    font-size: 20px;
 }
 
-#header #nav-bar{
+.navbar{
     position: fixed;
-    width: 90%;
-    height: 30px;
-}
-
-#header #nav-bar ul .nav-link {
-    text-decoration: none;
-    margin-right: 10px;
-    color: coral;
-    font-size: large;
-    cursor: pointer;
+    width: 100%;
 }
 
 #header #header-img{
-    margin-top: 4000px;
     height: 120px;
-    margin-top: -60px;
     border-radius: 70px;
 }
 
